Initialize web application via create-cloudflare CLI
Details:
  C3 = create-cloudflare@2.46.0
  project name = party-app-frontend
  framework = svelte
  framework cli = sv@0.8.3
  package manager = bun@1.2.8
  wrangler = wrangler@4.14.0
  git = 2.48.1

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,10 +5,11 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "party-app-frontend",
-	"main": "worker/index.ts",
-	"compatibility_date": "2025-05-05",
+	"main": ".svelte-kit/cloudflare/_worker.js",
+	"compatibility_date": "2025-05-06",
 	"assets": {
-		"not_found_handling": "single-page-application"
+		"binding": "ASSETS",
+		"directory": ".svelte-kit/cloudflare"
 	},
 	"observability": {
 		"enabled": true
