--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
 		"wrangler": "^4.14.2"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.5",
+		"tailwindcss": "^4.1.5"
 	}
 }
