--- a/frontend/wrangler.jsonc
+++ b/frontend/wrangler.jsonc
@@ -14,12 +14,14 @@
 	"observability": {
 		"enabled": true
 	},
-	"services": [
-		{
-			"binding": "PARTY_APP",
-			"service": "party-app"
-		}
-	],
+	"durable_objects": {
+		"bindings": [
+			{
+				"name": "PARANOIA",
+				"class_name": "Paranoia"
+			}
+		]
+	},
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -53,5 +55,10 @@
 	 * Service Bindings (communicate between multiple Workers)
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
 	 */
-	// "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
+	"services": [
+		{
+			"binding": "PARTY_APP",
+			"service": "party-app"
+		}
+	]
 }
