Starting murder backend

--- a/backend/wrangler.jsonc
+++ b/backend/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "name": "party-app",
-  "main": "./PartyApp.ts",
+  "main": "./index.ts",
   "compatibility_date": "2025-05-07",
   "durable_objects": {
 		"bindings": [
