Finalising murder gamemode backend and beginning frontend

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
-    "cf-typegen": "wrangler types && mv worker-configuration.d.ts src/"
+    "cf-typegen": "wrangler types"
   },
   "dependencies": {
     "wrangler": "4`"
